<resources>
    <string name="app_name">MobilePortail</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Mot de Passe</string>
    <string name="prompt_username">Identifiant</string>
    <string name="action_sign_in_short">Accéder</string>
    <string name="error_field_required">Cette information est requise</string>
    <string name="err_try_again">Oups! Une erreur s\'est produite. Veuillez réessayez.</string>

    <string name="title_activity_class_notes">Notes de Cours</string>
    <string name="action_logout">Terminé</string>
    <string name="class_avg">Moyenne</string>
    <string name="class_name">Nom du Cours</string>

    <string name="button_signout">Déconnexion</string>
    <string name="logo_description">Logo du Conseil Scolaire MonAvenir</string>

    <!-- News about bus & school availability -->
    <string name="school_open_txt">École Ouverte</string>
    <string name="school_closed_txt">École Fermée</string>
    <string name="bus_normal_txt">Transport Normal</string>
    <string name="bus_cancel_txt">Transport Annulé</string>
    <string name="bus_condition_txt">Transport Perturbé</string>

    <string name="base_portail_text">Portail des Élèves</string>
    <string name="see_class_results">Voir résultats de classe</string>
    <string name="school_news">Nouvelles</string>
    <string name="open_in_site">Ouvrir dans le site de l\'école</string>
    <string name="loading_login_data">Chargement des données…</string>
    <string name="info_no_class_today">Aucun cours aujoud\'hui.</string>
    <string name="connected_as">Connecté en tant que:</string>

</resources>
