<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.briccsquad.mobileportail.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/ic_cscmonavenir_logo1" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="458dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <TextView
            android:id="@+id/textView"
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/base_portail_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/uname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ededed"
                android:hint="@string/prompt_username"
                android:includeFontPadding="true"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColor="#111111"
                android:textColorHint="#898989"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="#ededed"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="#111111"
                android:textColorHint="#898989"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/uname_sign_in_button"
            style="?android:textAppearanceMediumInverse"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
